style updates, fixed jquery issue on mobile

--- a/assets/src/css/blocks/contact-block.scss
+++ b/assets/src/css/blocks/contact-block.scss
@@ -17,6 +17,9 @@
 		padding: 20px;
 		border-radius: 10px;
 		position: relative;
+		@media (max-width: 445px) {
+			flex: 0 0 90% !important;
+		}
 		&:hover {
 			.item-action-wrap {
 				display: flex;
